# ghidalgo3.github.io

./: .editorconfig  .gitignore  .gitmodules  404.html  CNAME  Gemfile  README.md  _config.yml  about.md  index.md  watch.sh
.github/workflows/: azure-static-web-apps-delightful-pond-0d763710f.yml
_drafts/: 2021-06-27-welcome-to-jekyll.markdown  2021-10-19-final-thoughts-on-FSharp.markdown  2021-10-29-nvim.markdown  draft.md
_posts/: 2021-06-27-rust-intro.markdown  2021-07-09-expression-logging.markdown  2021-07-24-fun-with-jq.markdown  2021-10-29-nvim.markdown  2022-04-01-linux-disk.markdown  2022-08-04-REPLs.markdown  2023-06-30-my-csharp-projects.markdown  2024-01-26-kubernetes-gets-everyone.markdown  2024-01-26-new-job.markdown  2024-02-04-5-mins-for-python.markdown  2024-02-04-doing-k8s.markdown  2024-02-04-terraform-secrets.markdown
k8s/: .dockerignore  Dockerfile  README.md  deployment.yaml  dev-requirements.txt  ingress.yaml  pyproject.toml  requirements.txt  service.yaml  terraform.tfstate  terraform.tfstate.backup  variables.tf
k8s/scripts/: bootstrap  deploy  install  publish  server  setup
k8s/src/archetype/: __init__.py  main.py
k8s/terraform/: main.tf  network.tf  output.tf  provider.tf
src/: Blog.csproj  about.markdown  fun with sed and awk
src/Properties/: launchSettings.json
src/_drafts/: 2021-10-19-final-thoughts-on-FSharp.markdown  2021-10-29-nvim.markdown
src/static/: README.md  config.toml
src/wwwroot/: index.html
static/: README.md  config.toml
wwwroot/: 404.html  index.html  index.xml  sitemap.xml
wwwroot/posts/: index.html  (+1 more)
(+42 files in other folders)
